[metadata]
name = rplus
version = 0.1
author = zachyboy12
description = A powerful but slow module for getting the randomist-based things, from numbers to words.
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/zachyboy12/r+
project_urls =
    Bug Tracker = https://github.com/zachyboy12/r+/issues
keywords = random, generator, powerful, slow
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir = /r+
python_requires = <=3.6

[options.packages.find]
where = /r+